# master-data-service

./: .env  Cargo.toml  Dockerfile  README.md  sqlx-data.json
migrations/: 20240605101806_analysis_method.down.sql  20240605101806_analysis_method.up.sql  20240605101807_assigning_executor_method.down.sql  20240605101807_assigning_executor_method.up.sql  20240605101808_payment_conditions.down.sql  20240605101808_payment_conditions.up.sql  20240605101809_ppz_type.down.sql  20240605101809_ppz_type.up.sql  20240605101812_price_information_request_type.down.sql  20240605101812_price_information_request_type.up.sql  20240702140022_route_crit.down.sql  20240702140022_route_crit.up.sql  20240702140023_route_list.down.sql  20240702140023_route_list.up.sql  20240702140024_route_data.down.sql  20240702140024_route_data.up.sql  20240710134908_estimated_commission_result.down.sql  20240710134908_estimated_commission_result.up.sql  20240710134909_organization.down.sql  20240710134909_organization.up.sql  20240717164053_conclusion_templates.down.sql  20240717164053_conclusion_templates.up.sql  20240717164054_conclusion_templates_criteria.down.sql  20240717164054_conclusion_templates_criteria.up.sql  20240717164055_conclusion_templates_variables.down.sql  20240717164055_conclusion_templates_variables.up.sql  20240726160839_attachment_type.down.sql  20240726160839_attachment_type.up.sql  20240726160840_estimated_commission_role.down.sql  20240726160840_estimated_commission_role.up.sql  20240726160841_pricing_unit.down.sql  20240726160841_pricing_unit.up.sql  20240726160842_protocol_type.down.sql  20240726160842_protocol_type.up.sql  20240821133204_scheduler_catalog.down.sql  20240821133204_scheduler_catalog.up.sql  20241003182950_agenda_status.down.sql  20241003182950_agenda_status.up.sql  20241003182951_protocol_status.down.sql  20241003182951_protocol_status.up.sql  (+68 more)
src/: lib.rs  main.rs
(+87 files in other folders)
